Fixed rank role changes. Added verification role fix. Cleaned up some things.