@@ -33,6 +33,7 @@ import java.io.*;
 import java.net.URL;
 import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
+import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
@@ -47,8 +48,7 @@ public class CommandManager extends ListenerAdapter {
     public static String roleAnnounceMessageChannel = "";
     public static String metricsMessageChannel = "";
     public static String metricsMessageId = "";
-    public static ArrayList<String> rankList = new ArrayList<>() { { add("None"); add("Bronze"); add("Silver"); add("Gold"); add("Amethyst"); add("Onyx"); add("Diamond"); }
-    };
+    public static ArrayList<String> rankList = new ArrayList<>() { { add("None"); add("Bronze"); add("Silver"); add("Gold"); add("Amethyst"); add("Onyx"); add("Diamond"); } };
 
     //These are for checking Kablooey's status
     String statusURL = dotenv.get("KABLOOEY_PING_LINK");
@@ -60,7 +60,7 @@ public class CommandManager extends ListenerAdapter {
      *
      * @param e - The ReadyEvent listener. Activates when the bot is ready / starts up
      */
-    public void onReady(ReadyEvent e) {
+    public void onReady(@NotNull ReadyEvent e) {
 
         // This try catch gets the information for the metrics channel message
         try {
@@ -101,7 +101,7 @@ public class CommandManager extends ListenerAdapter {
         // Nitro and Rank / Name change stuff.
         scheduler.scheduleAtFixedRate(() -> {
             try { sendNames(e); }
-            catch (IOException ignored) { }
+            catch (IOException | ParseException ignored) { }
 
             try { updateUsers(e); }
             catch (IOException | ParseException ex) { throw new RuntimeException(ex); }
@@ -111,7 +111,7 @@ public class CommandManager extends ListenerAdapter {
     /** Initializes Kablooey. Sets up all the commands.
      *  @param e - The GuildReadyEvent listener. Activates when the bot is ready / starts up
      */
-    public void onGuildReady(GuildReadyEvent e) {
+    public void onGuildReady(@NotNull GuildReadyEvent e) {
         assignRoles(e);
 
         List<CommandData> commandData = new ArrayList<>();
@@ -122,7 +122,7 @@ public class CommandManager extends ListenerAdapter {
         OptionData mention = new OptionData(OptionType.MENTIONABLE, "mention", "The group you want to notify with the message.", false);
         OptionData attachment = new OptionData(OptionType.ATTACHMENT, "attachment", "The image / gif in the embed.", false);
         commandData.add(Commands.slash("announce", "Sends an announcement to a specified channel.").setDefaultPermissions(DefaultMemberPermissions.enabledFor(Permission.VIEW_AUDIT_LOGS)).addOptions(channel, message, sendAsBot, mention, attachment));
-        commandData.add(Commands.slash("edit_announcement", "Edits an announcement.").setDefaultPermissions(DefaultMemberPermissions.enabledFor(Permission.VIEW_AUDIT_LOGS)).addOptions(channel, messageId, message, attachment));
+        commandData.add(Commands.slash("edit_announcement", "Edits an announcement.").setDefaultPermissions(DefaultMemberPermissions.enabledFor(Permission.VIEW_AUDIT_LOGS)).addOptions(messageId, message, attachment));
         commandData.add(Commands.slash("role_assigner", "An announcement that should only be made once. Lets people choose roles.").setDefaultPermissions(DefaultMemberPermissions.DISABLED).addOptions(channel, message, sendAsBot, mention, attachment));
         commandData.add(Commands.slash("metrics", "Creates a message that displays the current game metrics. Should only be made once.").setDefaultPermissions(DefaultMemberPermissions.DISABLED).addOptions(channel));
         commandData.add(Commands.slash("delete_metrics", "Deletes the metrics message and the messageId2.txt file so you can repost it.").setDefaultPermissions(DefaultMemberPermissions.DISABLED));
@@ -140,11 +140,11 @@ public class CommandManager extends ListenerAdapter {
      *  @param r - MessageReactionAddEvent listener. Activates when a user adds a reaction
      */
     public void onMessageReactionAdd(MessageReactionAddEvent r) {
-        if (r.getUser().isBot()) return;
+        if (Objects.requireNonNull(r.getUser()).isBot()) return;
         if (!r.getMessageId().equals(roleAnnounceMessageId)) return;
         String roleToAdd = getRole.get(":" + r.getReaction().getEmoji().getAsReactionCode());
         if (roleToAdd != null)
-            r.getGuild().addRoleToMember(UserSnowflake.fromId(r.getUserId()), r.getGuild().getRolesByName(roleToAdd, true).get(0)).queue();
+            r.getGuild().addRoleToMember(UserSnowflake.fromId(r.getUserId()), r.getGuild().getRolesByName(roleToAdd, true).getFirst()).queue();
     }
 
     /** The message remove reaction listener. This is used for letting users remove roles for themselves.
@@ -154,7 +154,7 @@ public class CommandManager extends ListenerAdapter {
         if (!r.getMessageId().equals(roleAnnounceMessageId)) return;
         String roleToRemove = getRole.get(":" + r.getReaction().getEmoji().getAsReactionCode());
         if (roleToRemove != null)
-            r.getGuild().removeRoleFromMember(UserSnowflake.fromId(r.getUserId()), r.getGuild().getRolesByName(roleToRemove, true).get(0)).queue();
+            r.getGuild().removeRoleFromMember(UserSnowflake.fromId(r.getUserId()), r.getGuild().getRolesByName(roleToRemove, true).getFirst()).queue();
     }
 
     /** Gets the message id from a file.
@@ -193,11 +193,11 @@ public class CommandManager extends ListenerAdapter {
         // Depending on the reaction, add the reaction if they don't already have it.
         // Role information is retrieved from the HashMap.
         if (!roleAnnounceMessageId.isEmpty()){
-            e.getJDA().getTextChannelById(roleAnnounceMessageChannel).retrieveMessageById(roleAnnounceMessageId).queue(m -> {
+            Objects.requireNonNull(e.getJDA().getTextChannelById(roleAnnounceMessageChannel)).retrieveMessageById(roleAnnounceMessageId).queue(m -> {
                 for (MessageReaction r : m.getReactions()){
                     String rtaStr = getRole.get(":" + r.getEmoji().getAsReactionCode());
                     if (rtaStr != null){
-                        Role roleToAdd = r.getGuild().getRolesByName(rtaStr, true).get(0);
+                        Role roleToAdd = r.getGuild().getRolesByName(rtaStr, true).getFirst();
                         r.retrieveUsers().queue(users -> {
                             for (User u : users){
                                 Member member = e.getGuild().getMemberById(u.getId());
@@ -217,20 +217,20 @@ public class CommandManager extends ListenerAdapter {
      */
     public void onGuildMemberUpdateBoostTime(@NotNull GuildMemberUpdateBoostTimeEvent e) {
         try { sendNames(e); }
-        catch (IOException ignored) { }
+        catch (IOException | ParseException ignored) { }
     }
 
     /** Sends a list of all users with the Nitro Role to the server.
      *  This is used so users in the game can have the nitro emblem on SK-TV
      *  @param e - Event listener - Generic event listener.
      */
-    public void sendNames(Event e) throws IOException {
+    public void sendNames(Event e) throws IOException, ParseException {
 
         // Create a list of all users who have boosted the server via their Nitro role.
         String boosters;
         List<Member> members = new ArrayList<>();
-        for(Member m : e.getJDA().getGuilds().get(0).loadMembers().get()){
-            if (m.getRoles().contains(e.getJDA().getGuilds().get(0).getBoostRole())){
+        for(Member m : e.getJDA().getGuilds().getFirst().loadMembers().get()){
+            if (m.getRoles().contains(e.getJDA().getGuilds().getFirst().getBoostRole())){
                 members.add(m);
             }
         }
@@ -250,15 +250,10 @@ public class CommandManager extends ListenerAdapter {
         }
 
         // Send off the information to the server.
-        CloseableHttpClient httpclient = HttpClients.createDefault();
-        HttpPost httppost = new HttpPost(dotenv.get("NITRO_LINK"));
         List<NameValuePair> params = new ArrayList<>(2);
         params.add(new BasicNameValuePair("token", dotenv.get("POST_TOKEN")));
         params.add(new BasicNameValuePair("ids", boosters));
-        httppost.setEntity(new UrlEncodedFormEntity(params, StandardCharsets.UTF_8));
-        CloseableHttpResponse response = httpclient.execute(httppost);
-        httpclient.close();
-        response.close();
+        postRequest(dotenv.get("NITRO_LINK"), params, "Failed to get the list of Nitro Users");
     }
 
     public void updateUsers(Event e) throws IOException, ParseException {
@@ -266,64 +261,75 @@ public class CommandManager extends ListenerAdapter {
         // Get the Sitekick channel
         Guild SK = e.getJDA().getGuildById("603580736250970144");
 
+        Role verifiedRole = SK.getRolesByName("Verified", true).get(0);
+
+        ArrayList<String> roleList = new ArrayList<>() { { add("Administrator" ); add("Developer" ); add("Moderator"); } };
+
         // Set up the first post
-        CloseableHttpClient httpclient = HttpClients.createDefault();
-        HttpPost httppost = new HttpPost(dotenv.get("VERIFIED_MEMBERS_LINK"));
-        List<NameValuePair> params = new ArrayList<>(2);
+        List<NameValuePair> params = new ArrayList<>(1);
         params.add(new BasicNameValuePair("token", dotenv.get("POST_TOKEN")));
-        httppost.setEntity(new UrlEncodedFormEntity(params, StandardCharsets.UTF_8));
-        CloseableHttpResponse response = httpclient.execute(httppost);
-        HttpEntity entity = response.getEntity();
-        JSONObject json = new JSONObject(EntityUtils.toString(entity, StandardCharsets.UTF_8));
+        JSONObject json = postRequest(dotenv.get("VERIFIED_MEMBERS_LINK"), params, "Failed to get the Verified Members List");
         JSONArray players = json.getJSONArray("players");
+        System.out.println("\n" + Instant.now() + " Retrieved Page 1 of " + json.getInt("totalPages") + " from the verified members link successfully.");
 
         // Go through every page starting at 1 since we already got page 0 from the first thing
         for (int i = 1; i < json.getInt("totalPages"); i++){
 
             // Go through every player on this page.
-            for (int j = 0; j < json.getInt("resultsPerPage"); j++){
+            for (int j = 0; j < players.length(); j++){
 
-                // Get the member from the json and check if it's they're still in the discord
+                // Get the member from the json and check if they're still in the discord
                 JSONObject member = players.getJSONObject(j);
-                Member m = SK.getMemberById(member.get("discordId").toString());
-
-                if (m == null)
+                Member m = Objects.requireNonNull(SK).getMemberById(member.get("discordId").toString());
+                if (m == null) {
+                    System.out.println(Instant.now() + " Player '" + member.get("username") + "' is no longer in the discord");
                     continue;
+                }
 
                 //Set Discord name to name in game
-                if (Objects.equals(m.getNickname(), member.get("username").toString())){
-                    m.modifyNickname(member.get("username").toString()).queue();
+                if (m.getRoles().stream().noneMatch(element -> roleList.contains(element.getName())) && (m.getNickname() == null || !Objects.equals(m.getNickname(), member.get("username").toString()))){
+                    m.modifyNickname(member.get("username").toString()).queue(
+                        (success) -> System.out.println(Instant.now() + " " + m.getUser().getName() + " Nickname changed to in game name: " + m.getNickname()),
+                        (error) -> System.out.println(Instant.now() + " Failed to set new nickname for user: " + m.getUser().getName())
+                    );
                 }
 
                 // Set Rank Stuff
                 if (!member.get("rank").toString().equals("None")){
                     Role gameRank = SK.getRolesByName(member.get("rank").toString(), true).getFirst();
 
-                    // If the player currently has any of the roles in rankList, remove that rank
+                    // If the player currently has any of the roles in the rank list and that role is not the same as their current one, remove it.
                     if (m.getRoles().stream().anyMatch(element -> rankList.contains(element.getName()))){
-                        if (!m.getRoles().contains(gameRank)){
-                            m.getRoles().removeIf(r -> rankList.contains(r.getName()));
+                        if (!m.getRoles().contains(gameRank)) {
+                            for (Role r : m.getRoles()) {
+                                if (rankList.contains(r.getName())) {
+                                    SK.removeRoleFromMember(UserSnowflake.fromId(m.getUser().getId()), r).queue(successMessage -> System.out.println(Instant.now() + " Rank Role '" + gameRank.getName() + "' REMOVED from user: " + m.getEffectiveName()));
+                                }
+                            }
                         }
                     }
+
                     // Add their current rank from the game to the discord
-                    SK.addRoleToMember(m, gameRank).queue();
+                    if (!m.getRoles().contains(gameRank)) {
+                        SK.addRoleToMember(m, gameRank).queue(successMessage -> System.out.println(Instant.now() + " Rank Role '" + gameRank.getName() + "' ADDED to user: " + m.getEffectiveName()));
+
+                    }
+                }
+
+                // Add verified role if they don't have it.
+                if (!m.getRoles().contains(verifiedRole)) {
+                    SK.addRoleToMember(UserSnowflake.fromId(m.getUser().getId()), verifiedRole).queue(successMessage -> System.out.println(Instant.now() + " ADDED VERIFIED Role to user: " + m.getEffectiveName()));
                 }
             }
 
             // Do another POST request for the next page.
-            httppost = new HttpPost(dotenv.get("VERIFIED_MEMBERS_LINK") + "?page=" + i);
-            params = new ArrayList<>(2);
-            params.add(new BasicNameValuePair("token", dotenv.get("POST_TOKEN")));
-            httppost.setEntity(new UrlEncodedFormEntity(params, StandardCharsets.UTF_8));
-            response = httpclient.execute(httppost);
-            entity = response.getEntity();
-            json = new JSONObject(EntityUtils.toString(entity, StandardCharsets.UTF_8));
+            json = postRequest(dotenv.get("VERIFIED_MEMBERS_LINK") + "?page=" + i, params, "Failed to get the Verified Members List");
             players = json.getJSONArray("players");
+            System.out.println("\n" + Instant.now() + " Retrieved Page " + (i + 1) + " of " + json.getInt("totalPages") + " from the verified members link successfully.");
         }
 
-        httpclient.close();
-        response.close();
-        entity.close();
+        System.out.println("\n" + Instant.now() + " Finished scanning the Verified Members List!");
+
     }
 
     /** The hub for all slash commands for Kablooey.
@@ -332,26 +338,27 @@ public class CommandManager extends ListenerAdapter {
     public void onSlashCommandInteraction(SlashCommandInteractionEvent e){
         String command = e.getName();
 
-        // If the user types the command /announce or /role_assigner, we break down each component, then send it
-        // to the announceCommand function.
+        // If the user types the command /announce or /role_assigner, we break down each component, then send it to the announceCommand function.
         if (command.equals("announce") || command.equals("role_assigner")) {
-            String message = e.getOption("message") == null ? null : e.getOption("message").getAsString();
-            boolean sendAsBot = e.getOption("send_as_bot") == null || e.getOption("send_as_bot").getAsBoolean();
-            IMentionable mention = e.getOption("mention") == null ? null : e.getOption("mention").getAsMentionable();
-            Message.Attachment attachment = e.getOption("attachment") == null ? null : e.getOption("attachment").getAsAttachment();
-            Announce.announceCommand(e, command, e.getOption("channel").getAsChannel(), message, sendAsBot, mention, attachment, getRole);
+            String message = e.getOption("message") == null ? null : Objects.requireNonNull(e.getOption("message")).getAsString();
+            boolean sendAsBot = e.getOption("send_as_bot") == null || Objects.requireNonNull(e.getOption("send_as_bot")).getAsBoolean();
+            IMentionable mention = e.getOption("mention") == null ? null : Objects.requireNonNull(e.getOption("mention")).getAsMentionable();
+            Message.Attachment attachment = e.getOption("attachment") == null ? null : Objects.requireNonNull(e.getOption("attachment")).getAsAttachment();
+            Announce.announceCommand(e, command, Objects.requireNonNull(e.getOption("channel")).getAsChannel(), message, sendAsBot, mention, attachment, getRole);
         }
+
+        // If the user types the command /edit_announcement, break down each component and send it to the edit_announcement function
         if (command.equals("edit_announcement")){
-            String messageId = e.getOption("message_id") == null ? null : e.getOption("message_id").getAsString();
-            String message = e.getOption("message") == null ? null : e.getOption("message").getAsString();
-            Message.Attachment attachment = e.getOption("attachment") == null ? null : e.getOption("attachment").getAsAttachment();
-            Announce.editAnnouncement(e, e.getOption("channel").getAsChannel(), messageId, message, attachment);
+            String messageId = e.getOption("message_id") == null ? null : Objects.requireNonNull(e.getOption("message_id")).getAsString();
+            String message = e.getOption("message") == null ? null : Objects.requireNonNull(e.getOption("message")).getAsString();
+            Message.Attachment attachment = e.getOption("attachment") == null ? null : Objects.requireNonNull(e.getOption("attachment")).getAsAttachment();
+            Announce.editAnnouncement(e, messageId, message, attachment);
         }
 
         // If the user types the command /metrics, we go to the metricsCommand function
         if (command.equals("metrics")){
             try {
-                Metrics.metricsCommand(e, e.getOption("channel").getAsChannel());
+                Metrics.metricsCommand(e, Objects.requireNonNull(e.getOption("channel")).getAsChannel());
             } catch (IOException | ParseException | InterruptedException ex) {
                 throw new RuntimeException(ex);
             }
@@ -360,7 +367,7 @@ public class CommandManager extends ListenerAdapter {
         // If the user types the command /delete_metrics, then we get the message's channel and ID and delete it, then reset variables.
         if (command.equals("delete_metrics")){
             if (!metricsMessageChannel.isEmpty() && !metricsMessageId.isEmpty()){
-                e.getGuild().getTextChannelById(metricsMessageChannel).retrieveMessageById(metricsMessageId).queue(m -> {
+                Objects.requireNonNull(Objects.requireNonNull(e.getGuild()).getTextChannelById(metricsMessageChannel)).retrieveMessageById(metricsMessageId).queue(m -> {
                     m.delete().queue();
                     metricsMessageChannel = "";
                     metricsMessageId = "";
@@ -382,5 +389,35 @@ public class CommandManager extends ListenerAdapter {
         BufferedWriter log = new BufferedWriter(new FileWriter(messageId));
         log.write(n);
         log.close();
+    }
+
+    /** Sends a post request to a link. Since the post request has no parameters / arguments, we just need to get the response.
+     *  @param link - The link that the POST request will be sent to.
+     *  @param params - The parameters to send to the HTTP request
+     *  @param errorMessage - The error message to print if it fails.
+     */
+    public static JSONObject postRequest(String link, List<NameValuePair> params, String errorMessage) throws IOException, ParseException {
+
+        // Setup the post request and send it.
+        CloseableHttpClient httpclient = HttpClients.createDefault();
+        HttpPost httppost = new HttpPost(link);
+        httppost.setEntity(new UrlEncodedFormEntity(params, StandardCharsets.UTF_8));
+        CloseableHttpResponse response = httpclient.execute(httppost);
+        JSONObject json = null;
+
+        // If we get the code 200 back (everything went OK), then populate the json variable with the information
+        if (response.getCode() == 200){
+            HttpEntity entity = response.getEntity();
+            json = new JSONObject(EntityUtils.toString(entity, StandardCharsets.UTF_8));
+            entity.close();
+        }
+
+        // Otherwise, print to the screen the code / why and where the request failed.
+        else System.out.println(Instant.now() + " ERROR " + response.getCode() +": " + errorMessage);
+
+        httpclient.close();
+        response.close();
+
+        return json;
     }
 }
